# engsim

./: CMakeLists.txt  README.md  main.cpp  tests.cpp  tests.h
components/: ButterflyValve.cpp  ButterflyValve.h  Camshaft.cpp  Camshaft.h  CombustionChamber.cpp  CombustionChamber.h  Constants.cpp  Constants.h  CrankPin.cpp  CrankPin.h  Crankshaft.cpp  Crankshaft.h  EngineInfo.cpp  EngineInfo.h  Gas.cpp  Gas.h  GasMixture.cpp  GasMixture.h  Gas_Mixture_Flow.cpp  Gas_Mixture_Flow.h  Mixer.cpp  Mixer.h  SolverInfo.cpp  SolverInfo.h  Valve.cpp  Valve.h  utilities.cpp  utilities.h  utility.cpp  utility.h
